--- a/src/MainContent/Dashboard/homeStyle.css
+++ b/src/MainContent/Dashboard/homeStyle.css
@@ -15,7 +15,10 @@
 
 .content{
   flex:1;
+  max-height: 1200px;
+  height: 100%;
 }
+
 
 
 .body-image {
@@ -46,6 +49,7 @@
     margin-bottom: 20px;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
+
 
 
 
@@ -106,7 +110,7 @@
   height: 100%;
   max-height: 600px;
   margin-top: 50px;
-  background-image: url("C:\Users\thuon\Desktop\Nail Image Project\Frontend project\my-react-app\src\assets\footer.jpg");
+  
   background-size:cover;
   background-position: center;
   background-repeat: no-repeat;
