nav bar changes

--- a/src/App.css
+++ b/src/App.css
@@ -20,7 +20,7 @@
 }
 
 .App-header {
-  background-color:whitesmoke;
+  background-color:black;
   display: flex;
   align-items: stretch;
   text-align:left;
@@ -33,10 +33,9 @@
 }
 
 .store-name {
-  font-size: 45px;
-  font-family:serif;
+  
   margin-bottom: 10px;
-  color: #333;
+  
   flex-grow: 2;
 }
 
@@ -49,11 +48,22 @@
   justify-items: center;
   position: sticky;
   padding-right: 25px;
+
+  
+  letter-spacing: 3px;
+  text-decoration: none;
+  font-size: var(--fs-size);
+  font-family: "Arial";
+  --text-stroke-color: rgba(255,255,255,0.6);
+
 }
 
+.navbar p {
+  color: aliceblue;
+}
 
 .nav-link {
-  color:black;
+  
   text-decoration: none;
   font-size: 18px;
   padding-right: 50px;
@@ -65,7 +75,6 @@
 /* Need to delete this*/
 .content {
   flex:1; /*Allows the content to grow and push footer to the bottom */
-
 }
 
 
@@ -79,19 +88,7 @@
 }
 
 
-/*Footer content: header section */ 
-.footerBody {
-  display: flex;
-  flex-direction: column;
-  padding: 70px;
-  height: 100%;
-  max-height: 600px;
-  margin-top: 50px;
-  background-image: url('./assets/footer.jpg');
-  background-size:cover;
-  background-position: center;
-  background-repeat: no-repeat;
-}
+
 
 
 .headerText{
@@ -166,4 +163,48 @@
   transform: translateY(2px);
 }
 
+
+/* === VIP NAIL BUTTON STYLES ===*/
+.button {
+  margin: 0;
+  height: auto;
+  background: transparent;
+  padding: 0;
+  border: none;
+  cursor: pointer;
+}
+
+/* button styling */
+.button {
+  --border-right: 6px;
+  --text-stroke-color: rgba(255,255,255,0.6);
+  --animation-color: #37FF8B;
+  --fs-size: 2em;
+  letter-spacing: 3px;
+  text-decoration: none;
+  font-size: var(--fs-size);
+  font-family: "Arial";
+  position: relative;
+  text-transform: uppercase;
+  color: transparent;
+  -webkit-text-stroke: 1px var(--text-stroke-color);
+}
+/* this is the text, when you hover on button */
+.hover-text {
+  position: absolute;
+  box-sizing: border-box;
+  content: attr(data-text);
+  color: var(--animation-color);
+  width: 0%;
+  inset: 0;
+  border-right: var(--border-right) solid var(--animation-color);
+  overflow: hidden;
+  transition: 0.5s;
+  -webkit-text-stroke: 1px var(--animation-color);
+}
+/* hover */
+.button:hover .hover-text {
+  width: 100%;
+  filter: drop-shadow(0 0 23px var(--animation-color))
+}
 
