--- a/src/MainContent/Dashboard/FooterBody/footerStyles.css
+++ b/src/MainContent/Dashboard/FooterBody/footerStyles.css
@@ -30,10 +30,10 @@
 
 
 .store-name{
-  font-size: 55px;
+  font-size: 65px;
   font-family:serif;
   margin-bottom: 10px;
-  color:#DEE2E6;
+  color:black;
 }
 
 
