--- a/src/MainContent/Dashboard/homeStyle.css
+++ b/src/MainContent/Dashboard/homeStyle.css
@@ -1,29 +1,46 @@
+body {
+  height: 100%;
+  margin: 0;
+}
+
+main {
+  flex: 1;
+}
+
+footer {
+  background-color: #f8f9fa;
+  text-align: center;
+  padding: 1rem;
+  padding-top: 200px;
+}
+
 .body-container {
     display: flex;
     align-items: center;
     justify-content: space-between;
     padding: 20px;
+    height: 1200px;
+    background-color: white;
    
-    background-color:ivory;
 }
 
 .image-container {
     flex: 2; /* Makes the image container take up 2 part of the available space */
-    max-width: 700px;
+    max-width: 900px;
     width: 100% ;  
+    height: 100%;
+    max-height: 900px;
 }
 
-.content{
-  flex:1;
-  max-height: 1200px;
-  height: 100%;
-}
 
+.body-changed{
+  margin-bottom: 5px;
+}
 
 
 .body-image {
     width: 100%; /* Makes the image responsive within its container */
-    max-width: 500px; /*Limits the maximum width */
+    max-width: 600px; /*Limits the maximum width */
     border-radius: 8px;
 }
 
@@ -49,6 +66,34 @@
     margin-bottom: 20px;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
+
+
+
+/* CSS Card setting */
+.image-card{
+  display:flex;
+  justify-content:space-around;
+  justify-items:center;
+  
+  background-color: white;
+  margin-bottom: 0px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+/* CSS for Card setting */
+
+
+
 
 
 
@@ -101,25 +146,7 @@
 
 
 
-/* Footer CSS */
-/*Footer content: header section */ 
-.footerBody {
-  display: flex;
-  flex-direction: column;
-  padding: 70px;
-  height: 100%;
-  max-height: 600px;
-<<<<<<< HEAD
-  margin-top: 0px;
- 
-=======
-  margin-top: 50px;
-  
->>>>>>> b16b9632bd96d257fea465b0fcf888974ab7dc1b
-  background-size:cover;
-  background-position: center;
-  background-repeat: no-repeat;
-}
+
 
 .headerText{
   align-items: center;
@@ -133,6 +160,11 @@
   font-family:serif;
   color:darkcyan;
 }
+
+
+/* Footer CSS */
+/*Footer content: header section */ 
+
 
 
 /*Footer content: bodyButton section */
@@ -199,10 +231,3 @@
   --gradient-end-text: '#C4E759';
 }
 
-.footer-text {
-  display: flex;
-}
-
-.footer-text p {
-
-}
